@@ -1,5 +1,11 @@
 2006-06-22  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/schroot.1.in, schroot/dchroot.1.in,
+	schroot/dchroot-dsa.1.in: Document differences in command
+	arguments and chdir behaviour.
+
+2006-06-22  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot-options.cc: Add a --debug option to enable
 	debugging messages.
 
